// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the shuttles map with a centerStop prop matches snapshot 1`] = `
"<ShuttlesMap tileServerUrl=\\"https://mbta-map-tiles-dev.s3.amazonaws.com\\" shapes={{...}} stops={{...}} centerStop={{...}}>
  <div className=\\"m-shuttles-map\\">
    <Component mapData={{...}} bounds={{...}} boundsByMarkers={false}>
      <Map bounds={{...}} center={{...}} zoom={18} maxZoom={18} minZoom={9} scrollWheelZoom={false} style={{...}} />
    </Component>
  </div>
</ShuttlesMap>"
`;

exports[`the shuttles map without a center prop matches snapshot 1`] = `
"<ShuttlesMap tileServerUrl=\\"https://mbta-map-tiles-dev.s3.amazonaws.com\\" shapes={{...}} stops={{...}}>
  <div className=\\"m-shuttles-map\\">
    <Component mapData={{...}} bounds={{...}} boundsByMarkers={false}>
      <Map bounds={{...}} center={{...}} zoom={13} maxZoom={18} minZoom={9} scrollWheelZoom={false} style={{...}} />
    </Component>
  </div>
</ShuttlesMap>"
`;
